--- a/index.html
+++ b/index.html
@@ -643,13 +643,13 @@
 				</div>
 				<ul>
 					<li>
-						<a href="Home.html">Home</a>
+						<a href="https://psitche.ac.in/che.in/index.php">Home</a>
 					</li>
 					<li>
-						<a href="Contact Us/Contact.html">Contact Us</a>
+						<a href="https://psitche.ac.in/che.in/contact_us.php">Contact Us</a>
 					</li>
 					<li>
-						<a href="Login/Login.html">Login</a>
+						<a href="#">Login</a>
 					</li>
 				</ul>
 			</nav>
