--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		href="https://bl6pap004files.storage.live.com/y4m8z4FeckMIQlaNZiwL7E4y00eAckWy1h3Qz7-LwJnTKzZZMlGG1q-TtbsKwfH2sq2k-XMBKBtUpYmAmDzFoGY3uwQmsy4CkJrwSmHx7fGwB_II-z7FC7oQJniy7vLDFRO_sgZ7MI61sDW1Zr4wL2yZRdCEEl32JM0zBq_wEa-B7RV7_9ubNQh-tYCcs8FLSPm?width=98&height=81&cropmode=none">
 	<style>
 		body {
-			background-image: url(https://bl6pap004files.storage.live.com/y4mjvkVNpgQE8ixF3qLp8De6XAh0T27sq1NFuB_3YzaOXbkrhxtBUABKlcYpcRNFg0MfGt1bR7esrvA76Rag7Ztn_Zq1tk6Xs3aS1rDp7d17yRgCnx7E7C58CrHyttevQtblpvrXpsM5PHiYXNKS4Gyfx0-jAf5sY1F8mT28R5ARJavcqPYBpZ5hHLmbwgD4IpV?width=1920&height=1080&cropmode=none);
+			background-image: bg-14.jpg;
 		}
 
 		nav {
